src/objects/PBS_AlmondNavigation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Keeps list of navigation items available for Almond application</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the item is active</description>
        <inlineHelpText>If the item is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>System.Label or custom title for navigation item</description>
        <inlineHelpText>System.Label or custom title for navigation item</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Item order on navigation bar</description>
        <inlineHelpText>Item order on navigation bar</inlineHelpText>
        <label>Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionOtherPages__c</fullName>
        <description>Comma separated list of pages in the same section</description>
        <inlineHelpText>Comma separated list of pages in the same section</inlineHelpText>
        <label>Section Other Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL address</description>
        <inlineHelpText>URL address</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PBS_AlmondNavigation</label>
</CustomObject>